# TheOrganizer

./: FileOrganizer.exe.spec  LICENSE  README.md  build.bat  build.py  build.sh  cli.py  companies_config.yaml  company_config.py  config.py  core.py  debug_organization.py  file_organizer_20250922_170316.csv  file_types.py  gui.py  io_ops.py  main.py  normalize.py  pyproject.toml  requirements.txt  test_corrections.py  test_improved_feedback.py  test_organizer.py  test_phrase_matching.py  version_info.txt
assets/: style.qss
test_output/Microsoft/Word/2025/: Contratto_Microsoft_2024.docx
